FullQa New/src/objects/Customer_Business_Profile__c.object
<CustomObject>
    <description>Questionnaire to capture business requirements and customer profile information.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Business Profiles</relationshipLabel>
        <relationshipName>Customer_Business_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Adding_AvaTax_to_an_existing_system__c</fullName>
        <description>The intent of this question is to understand if the AvaTax implementation is dependent on first rolling out a new host system (ERP, accounting software, or shopping cart)</description>
        <inlineHelpText>The intent of this question is to understand if the AvaTax implementation is dependent on first rolling out a new host system (ERP, accounting software, or shopping cart)</inlineHelpText>
        <label>Adding AvaTax to an existing system?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AvaTax is being added to a live system (ERP, Accounting software, shopping cart)</fullName>
                </value>
                <value>
                    <fullName>Implementing both AvaTax and a new ERP/shopping cart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_systems_capturing_sales__c</fullName>
        <description>Beyond your ERP, are you using any other system to generate or capture sales?</description>
        <inlineHelpText>Beyond your ERP, are you using any other system to generate or capture sales?</inlineHelpText>
        <label>Additional systems capturing sales?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Avalara_Sales_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a Sales Engineer was involved in the deal, please identify the SE.</description>
        <inlineHelpText>If a Sales Engineer was involved in the deal, please identify the SE.</inlineHelpText>
        <label>Avalara Sales Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Business_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_any_of_the_following_apply__c</fullName>
        <description>Do any of these business practices apply for this customer?  If so, please select all that apply.</description>
        <inlineHelpText>Do any of these business practices apply for this customer?  If so, please select all that apply.</inlineHelpText>
        <label>Do any of the following apply?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Bundled products</fullName>
                </value>
                <value>
                    <fullName>Service Provider for construction, repair, or testing.</fullName>
                </value>
                <value>
                    <fullName>Use of a 3rd party drop-shipper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_do_you_handle_exempt_sales__c</fullName>
        <description>how does the customer currently handle exempt sales?</description>
        <inlineHelpText>how does the customer currently handle exempt sales?</inlineHelpText>
        <label>How do you handle exempt sales?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_is_the_customer_using_AvaTax__c</fullName>
        <description>Please select the scenario that matches the customer&apos;s scenario.</description>
        <inlineHelpText>Please select the scenario that matches the customer&apos;s scenario.</inlineHelpText>
        <label>How is the customer using AvaTax?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All tax calculations are performed via AvaTax, using a Connector or the AvaTax API</fullName>
                </value>
                <value>
                    <fullName>All calculations will be provided by AvaTax, but some will be imported manually to AvaTax</fullName>
                </value>
                <value>
                    <fullName>At least some transactions are calculated without AvaTax and imported to Admin Console (Out of Harbor)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_which_states__c</fullName>
        <description>Do you have more than one address in a state? If yes, please list those states.</description>
        <inlineHelpText>Do you have more than one address in a state? If yes, please list those states.</inlineHelpText>
        <label>If yes to the above, which states&quot;</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama (AL)</fullName>
                </value>
                <value>
                    <fullName>Alaska (AK)</fullName>
                </value>
                <value>
                    <fullName>Arizona (AZ)</fullName>
                </value>
                <value>
                    <fullName>Arkansas (AR)</fullName>
                </value>
                <value>
                    <fullName>California (CA)</fullName>
                </value>
                <value>
                    <fullName>Colorado (CO)</fullName>
                </value>
                <value>
                    <fullName>Connecticut (CT)</fullName>
                </value>
                <value>
                    <fullName>Delaware (DE)</fullName>
                </value>
                <value>
                    <fullName>Florida (FL)</fullName>
                </value>
                <value>
                    <fullName>Georgia (GA)</fullName>
                </value>
                <value>
                    <fullName>Hawaii (HI)</fullName>
                </value>
                <value>
                    <fullName>Idaho (ID)</fullName>
                </value>
                <value>
                    <fullName>Illinois (IL)</fullName>
                </value>
                <value>
                    <fullName>Indiana (IN)</fullName>
                </value>
                <value>
                    <fullName>Iowa (IA)</fullName>
                </value>
                <value>
                    <fullName>Kansas (KS)</fullName>
                </value>
                <value>
                    <fullName>Kentucky (KY)</fullName>
                </value>
                <value>
                    <fullName>Louisiana (LA)</fullName>
                </value>
                <value>
                    <fullName>Maine (ME)</fullName>
                </value>
                <value>
                    <fullName>Maryland (MD)</fullName>
                </value>
                <value>
                    <fullName>Massachusetts (MA)</fullName>
                </value>
                <value>
                    <fullName>Michigan (MI)</fullName>
                </value>
                <value>
                    <fullName>Minnesota (MN)</fullName>
                </value>
                <value>
                    <fullName>Mississippi (MS)</fullName>
                </value>
                <value>
                    <fullName>Missouri (MO)</fullName>
                </value>
                <value>
                    <fullName>Montana (MT)</fullName>
                </value>
                <value>
                    <fullName>Nebraska (NE)</fullName>
                </value>
                <value>
                    <fullName>Nevada (NV)</fullName>
                </value>
                <value>
                    <fullName>New Hampshire (NH)</fullName>
                </value>
                <value>
                    <fullName>New Jersey (NJ)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Start_Date__c</fullName>
        <description>v</description>
        <inlineHelpText>Identify when the customer wants to start their implementation.   Avalara will call the customer on or about this date.</inlineHelpText>
        <label>Implementation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructions_Characteristics__c</fullName>
        <formula>IF(OR( 
INCLUDES(Do_any_of_the_following_apply__c,&quot;Retailer&quot;), 
INCLUDES(Do_any_of_the_following_apply__c,&quot;Wholesaler&quot;)),&quot;NO RISK: Proceed&quot;,&quot;MED RISK: Engage an SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions for Characteristics</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions_Industry__c</fullName>
        <formula>IF(OR( 
INCLUDES(Which_industry_describes_your_business__c,&quot;Environmental / Solar&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Gas &amp; Oil&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Utilities&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Wine &amp; Liquor&quot;)),&quot;HIGH RISK: Engage an SE&quot;, 
IF(OR( 
INCLUDES(Which_industry_describes_your_business__c,&quot;Agricultural&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Contractors / Construction&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Events Setup&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Manufacturing&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Multi-Level Marketing&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Packaging&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Rentals&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Restaurant Equipment&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Telecommunications&quot;)),&quot;MED RISK: Engage an SE&quot;, 
IF(OR( 
INCLUDES(Which_industry_describes_your_business__c,&quot;Other&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Insurance&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Medical&quot;), 
INCLUDES(Which_industry_describes_your_business__c,&quot;Veterinary&quot;)),&quot;LOW RISK&quot;, 
&quot;NO RISK&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions for Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions_Locations__c</fullName>
        <formula>IF( 
ISPICKVAL(More_than_one_address_per_state__c,&quot;Yes, between 2 and 10 addresses in any one state&quot;), &quot;MED RISK: Ensure connector supports Locations &amp; request copies of Returns.&quot;,
IF(ISPICKVAL(More_than_one_address_per_state__c,&quot;Yes, more than 10 addresses in any one state&quot;),&quot;HIGH RISK: Compliance approval is required. Will need copies of Returns.&quot;, 
&quot;LOW RISK: Proceed&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions for Locations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions_Number_of_Returns__c</fullName>
        <formula>IF(ISPICKVAL(Number_of_Returns_per_year__c,&quot;More than 500 per year&quot;),&quot;Requires approval of Compliance&quot;,
IF(ISPICKVAL(Number_of_Returns_per_year__c,&quot;100-500 per year&quot;),&quot;Engage a Sales Engineer&quot;,&quot;Proceed&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructions for # Returns</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Items_or_Services_sold_at_a_reduced_rate__c</fullName>
        <description>Do you sell items and services that are non-taxable or sold at a reduced rate?</description>
        <inlineHelpText>Do you sell items and services that are non-taxable or sold at a reduced rate?</inlineHelpText>
        <label>Items or Services sold at a reduced rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - reduced product taxability or Vendor Discounts</fullName>
                </value>
                <value>
                    <fullName>No - all items are tangible personal property (TPP) and no Vendor Disounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>More_than_one_address_per_state__c</fullName>
        <description>Please select the item that describes their business.  If more than one, the cusotmer likely has &quot;outlet reporting&quot; needs.  The connector will need to support &quot;Location codes&quot; and Compliance approval is required.</description>
        <inlineHelpText>Please select the item that describes their business.  If more than one, the cusotmer likely has &quot;outlet reporting&quot; needs.  The connector will need to support &quot;Location codes&quot; and Compliance approval is required.</inlineHelpText>
        <label>More than one address per state?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No more than one physical address in any one state</fullName>
                </value>
                <value>
                    <fullName>Yes, between 2 and 10 addresses in any one state</fullName>
                </value>
                <value>
                    <fullName>Yes, more than 10 addresses in any one state</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Returns_per_year__c</fullName>
        <description>How many Returns will the customer be filing each year</description>
        <inlineHelpText>How many Returns will the customer be filing each year</inlineHelpText>
        <label>Number of Returns per year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100 or less per year</fullName>
                </value>
                <value>
                    <fullName>100-500 per year</fullName>
                </value>
                <value>
                    <fullName>More than 500 per year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identify the Partner Contact if the customer has a partner engaged in the implementation.</description>
        <inlineHelpText>Identify the Partner Contact if the customer has a partner engaged in the implementation.</inlineHelpText>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Business Profiles (Partner Contact)</relationshipLabel>
        <relationshipName>Customer_Business_Profiles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Implementation_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The primary point of contact for the customer&apos;s implementation (this is who Avalara will reach out to)</description>
        <inlineHelpText>Identify the primary point of contact for the customer&apos;s implementation (this is who Avalara will reach out to)</inlineHelpText>
        <label>Primary Implementation Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Business Profiles</relationshipLabel>
        <relationshipName>Customer_Business_Profiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registered_in_all_AvaTax_states__c</fullName>
        <description>Are you registered in all of the states you want Avalara to file in for you?</description>
        <inlineHelpText>Are you registered in all of the states you want Avalara to file in for you?</inlineHelpText>
        <label>Registered in all AvaTax states?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, customer is registered in all AvaTax/Returns states</fullName>
                </value>
                <value>
                    <fullName>No, but registrations are in process</fullName>
                </value>
                <value>
                    <fullName>No. Customer needs to register</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_AvaTax_Live_Date__c</fullName>
        <description>When does the customer want to be LIVE on AvaTax?</description>
        <inlineHelpText>When does the customer want to be LIVE on AvaTax?</inlineHelpText>
        <label>Target AvaTax Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_CertCapture_Live_Date__c</fullName>
        <description>When does the customer want to be live on CertCapture?</description>
        <inlineHelpText>When does the customer want to be live on CertCapture?</inlineHelpText>
        <label>Target CertCapture Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Returns_Live_Date__c</fullName>
        <description>Which tax period does the customer want Avalara to take over their Returns filings?  (pick the first day of the particular month)</description>
        <inlineHelpText>Which tax period does the customer want Avalara to take over their Returns filings?  (pick the first day of the particular month)</inlineHelpText>
        <label>Target Returns Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identify the technical contact if different from the Primary Customer Contact.  This is a contact at the Customer or Partner.</description>
        <inlineHelpText>Identify the technical contact if different from the Primary Customer Contact.  This is a contact at the Customer or Partner.</inlineHelpText>
        <label>Technical contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Business Profiles (Technical contact)</relationshipLabel>
        <relationshipName>Customer_Business_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What_type_of_products_do_you_sell__c</fullName>
        <description>Describe the products and services this customer provides.</description>
        <inlineHelpText>Describe the products and services this customer provides.</inlineHelpText>
        <label>What type of products do you sell?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Which_industry_describes_your_business__c</fullName>
        <description>Do any of these industries apply for this customer?  If so, please select all that apply.</description>
        <inlineHelpText>Do any of these industries apply for this customer?  If so, please select all that apply.</inlineHelpText>
        <label>Which industries describe your business?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Clothing</fullName>
                </value>
                <value>
                    <fullName>Computer Hardware, sales &amp; services</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Health/Hygiene</fullName>
                </value>
                <value>
                    <fullName>Information Technology (IT)</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Veterinary</fullName>
                </value>
                <value>
                    <fullName>Agricultural</fullName>
                </value>
                <value>
                    <fullName>Contractors / Construction</fullName>
                </value>
                <value>
                    <fullName>Events Setup</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Multi-Level Marketing</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Rentals</fullName>
                </value>
                <value>
                    <fullName>Restaurant Equipment</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Environmental / Solar</fullName>
                </value>
                <value>
                    <fullName>Gas &amp; Oil</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Wine &amp; Liquor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_states_will_you_be_using_AvaTax__c</fullName>
        <description>What are the states in which the customer will need AvaTax to calculate tax?</description>
        <inlineHelpText>What are the states in which the customer will need AvaTax to calculate tax?</inlineHelpText>
        <label>Which states will you be using AvaTax?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama (AL)</fullName>
                </value>
                <value>
                    <fullName>Alaska (AK)</fullName>
                </value>
                <value>
                    <fullName>Arizona (AZ)</fullName>
                </value>
                <value>
                    <fullName>Arkansas (AR)</fullName>
                </value>
                <value>
                    <fullName>California (CA)</fullName>
                </value>
                <value>
                    <fullName>Colorado (CO)</fullName>
                </value>
                <value>
                    <fullName>Connecticut (CT)</fullName>
                </value>
                <value>
                    <fullName>Delaware (DE)</fullName>
                </value>
                <value>
                    <fullName>Florida (FL)</fullName>
                </value>
                <value>
                    <fullName>Georgia (GA)</fullName>
                </value>
                <value>
                    <fullName>Hawaii (HI)</fullName>
                </value>
                <value>
                    <fullName>Idaho (ID)</fullName>
                </value>
                <value>
                    <fullName>Illinois (IL)</fullName>
                </value>
                <value>
                    <fullName>Indiana (IN)</fullName>
                </value>
                <value>
                    <fullName>Iowa (IA)</fullName>
                </value>
                <value>
                    <fullName>Kansas (KS)</fullName>
                </value>
                <value>
                    <fullName>Kentucky (KY)</fullName>
                </value>
                <value>
                    <fullName>Louisiana (LA)</fullName>
                </value>
                <value>
                    <fullName>Maine (ME)</fullName>
                </value>
                <value>
                    <fullName>Maryland (MD)</fullName>
                </value>
                <value>
                    <fullName>Massachusetts (MA)</fullName>
                </value>
                <value>
                    <fullName>Michigan (MI)</fullName>
                </value>
                <value>
                    <fullName>Minnesota (MN)</fullName>
                </value>
                <value>
                    <fullName>Mississippi (MS)</fullName>
                </value>
                <value>
                    <fullName>Missouri (MO)</fullName>
                </value>
                <value>
                    <fullName>Montana (MT)</fullName>
                </value>
                <value>
                    <fullName>Nebraska (NE)</fullName>
                </value>
                <value>
                    <fullName>Nevada (NV)</fullName>
                </value>
                <value>
                    <fullName>New Hampshire (NH)</fullName>
                </value>
                <value>
                    <fullName>New Jersey (NJ)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Business Profile</label>
    <nameField>
        <label>Customer Business Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Business Profiles</pluralLabel>
    <recordTypes>
        <fullName>Customer_Business_Profile</fullName>
        <active>true</active>
        <description>Used to capture information about the customer&apos;s business needs during Discovery</description>
        <label>Customer Business Profile</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Live_date_must_be_after_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(Target_AvaTax_Live_Date__c &lt;=  Implementation_Start_Date__c, Target_CertCapture_Live_Date__c  &lt;=  Implementation_Start_Date__c,
Target_Returns_Live_Date__c  &lt;=  Implementation_Start_Date__c),
AND(ISNULL(Target_AvaTax_Live_Date__c),ISNULL(Target_CertCapture_Live_Date__c),ISNULL(Target_Returns_Live_Date__c)))</errorConditionFormula>
        <errorMessage>Please enter a target live date later than the Implementation Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_After_Today</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Implementation_Start_Date__c &lt;= TODAY(),ISNULL(Implementation_Start_Date__c))</errorConditionFormula>
        <errorDisplayField>Implementation_Start_Date__c</errorDisplayField>
        <errorMessage>You must enter a date which is after today.</errorMessage>
    </validationRules>
</CustomObject>